--- a/styles.css
+++ b/styles.css
@@ -56,24 +56,38 @@ main {
   background-color: var(--bg-tir);
 }
 
-#score {
-  display: none;
+img {
+  margin: 1.5em 0 0 0;
+  border: 8px solid;
+  border-image-source: url("assets/images/frame3.png");
+  border-image-slice: 20 22;
+  border-image-outset: 0.5;
+  border-image-repeat: round;
+  max-height: 400px;
+  max-width: 400px;
 }
 
 #answers, .answer {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+#answers {
+  flex-direction: column;
+  margin: 1.5em 0 0 0;
+}
+
 .answer {
   background-color: var(--bg-pri);
-  height: 1.5em;
-  width: 90%;
+  width: 250px;
   margin: 0.2em;
+  padding: 0.3em 0;
   border-radius: 5px;
-  background-color: #864b49;
+}
+
+#score {
+  display: none;
 }
 
 footer {
