--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ main {
 
 #start {
   margin: 1em 0 0 0;
-  width: 15em;
+  width: 55%;
   height: 5em;
   background-color: var(--bg-pri);
   border-radius: 10px;
